# context-generic-programming-hs-demo

./: README.md  cgp.cabal
app/: Main.hs
src/App/Classes/: Greeter.hs  Monad.hs  Person.hs  PersonMap.hs  PersonQuerier.hs  Time.hs
src/App/Classes/Errors/: PersonNotFound.hs  ShopClosed.hs
src/App/Components/: DaytimeGreeter.hs  QueryPersonFromMap.hs  SimpleGreeter.hs
src/App/Contexts/: Mock.hs
src/App/Types/: Person.hs
src/Demo1/: Classic.hs  Run.hs
src/Demo1/Classes/: MFunc.hs
src/Demo1/Components/: Bar.hs  Baz.hs  Compose.hs  Foo.hs
src/Demo2/: Classic.hs  Run.hs
src/Demo2/Classes/: MFunc.hs
src/Demo2/Components/: Bar.hs  Baz.hs  Compose.hs  Foo.hs
src/Demo2/Types/: Bar.hs  Foo.hs
src/Demo3/Classes/: Greeter.hs  Monad.hs  Person.hs  PersonMap.hs  PersonQuerier.hs  Time.hs
src/Demo3/Classes/Errors/: PersonNotFound.hs  ShopClosed.hs
src/Demo3/Components/: DaytimeGreeter.hs  QueryPersonFromMap.hs  SimpleGreeter.hs
src/Demo3/Contexts/: Mock.hs
src/Demo3/Types/: Person.hs
