cabal-version:      2.4
name:               context-generic-programming-demo
version:            0.1.0.0

description: A demo of using context-generic programming in Haskell

bug-reports: https://github.com/maybevoid/context-generic-programming-hs-demo

license: BSD-3-Clause

author: Soares Chen

maintainer: soares.chen@maybevoid.com

library
    exposed-modules:
        Demo3.Contexts.Mock
        Demo3.Types.Person

    other-modules:
        Demo3.Classes.Errors.PersonNotFound
        Demo3.Classes.Errors.ShopClosed
        Demo3.Classes.Greeter
        Demo3.Classes.Monad
        Demo3.Classes.Person
        Demo3.Classes.PersonMap
        Demo3.Classes.PersonQuerier
        Demo3.Classes.Time
        Demo3.Components.DaytimeGreeter
        Demo3.Components.QueryPersonFromMap
        Demo3.Components.SimpleGreeter

    default-extensions:
        AllowAmbiguousTypes
        DataKinds
        DeriveGeneric
        FlexibleContexts
        FlexibleInstances
        InstanceSigs
        MultiParamTypeClasses
        OverloadedLabels
        ScopedTypeVariables
        TypeApplications
        TypeFamilies
        UndecidableInstances

    build-depends:
        base ^>=4.16.3.0,
        unordered-containers ^>=0.2.19.1,
        hashable ^>=1.4.1.0,
        mtl ^>=2.2.2,
        optics-core ^>=0.4.1,
    hs-source-dirs:   src
    default-language: Haskell2010

executable context-generic-programming-demo
    main-is:          Main.hs

    build-depends:
        base ^>=4.16.3.0,
        unordered-containers ^>=0.2.19.1,
        context-generic-programming-demo,

    hs-source-dirs:   app
    default-language: Haskell2010
